Fixed mobile and tab versions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   <link rel="stylesheet" href="styles.css">
   <!-- Content Security Policy to enhance security against XSS and other attacks -->
   <meta http-equiv="Content-Security-Policy" content="default-src 'self'; script-src 'self'; style-src 'self' https://fonts.googleapis.com; img-src 'self' data:; font-src 'self' https://fonts.gstatic.com; connect-src 'self'; object-src 'none'; base-uri 'self'; form-action 'self' https://docs.google.com;">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
 <body>
@@ -36,7 +37,6 @@
       <p>Then Toby and Yumi arrived, our lively and opinionated little companions. They took over the schedules, the meals, and the best spots on the couch and somehow made sure that every decision, big or small, went through them first.</p>
       <p>Through every moment, we learned how to compromise, how to co-parent, and how to love more deeply than we ever thought possible. After so many memories, a few chewed couches, and countless shared laughs, we realized that a lifetime together with Toby and Yumi is exactly where we are meant to be.</p>
     </div>
-  </div>
 </div>
 
 <img src="src/divider.png" alt="Divider" class="divider-image">
@@ -103,7 +103,7 @@
 <div class="attire-section">
   <h1 class="attire-title">Gifts</h1>
   <div class="attire-text">
-    <p>Your presence means more to us than words can say. <br>However, should you wish to share a gift,<br>a monetary blessing would be received with heartfelt gratitude.</p>
+    <p>Your presence means more to us than words can say. <br>However, should you wish to share a gift, a monetary blessing would be received with heartfelt gratitude.</p>
   </div>
   <img class="gift-img" src="src/gift.png" alt="gift-img">
 </div>
@@ -113,7 +113,7 @@
 <div class="attire-section">
   <h1 class="attire-title">Photos</h1>
   <div class="attire-text">
-    <p>A day this special deserves to be remembered forever.<br>If you take photos during our celebration,<br>we’d be honored if you shared them with us using:<br>#LawfullyRujhAndLois</p>
+    <p>A day this special deserves to be remembered forever.<br>If you take photos during our celebration, we’d be honored if you shared them with us using:<br>#LawfullyRujhAndLois</p>
   </div>
   <img class="gift-img" src="src/camera.png" alt="gift-img">
 </div>
@@ -155,7 +155,7 @@
 <div class="faq-item">
   <details>
     <summary>I still have questions. Who should I ask?</summary>
-    <p>If you have any other questions, please contact:<br>Mhun D Ang<br>(0927) 236 1789</p>
+    <p>If you have questions, please contact:<br>Mhun D Ang<br>(0927) 236 1789</p>
   </details>
 </div>
 </div>
